feat: power gating, updated bib

--- a/Kristelle/final_report.bib
+++ b/Kristelle/final_report.bib
@@ -532,3 +532,58 @@
 	keywords = {Computer Science - Hardware Architecture, Computer Science - Machine Learning, Computer Science - Neural and Evolutionary Computing},
 	file = {PDF:C\:\\Users\\iamkr\\Zotero\\storage\\AJZNLATT\\Parashar et al. - 2017 - SCNN An Accelerator for Compressed-sparse Convolutional Neural Networks.pdf:application/pdf},
 }
+
+@inproceedings{liu_leveraging_2021,
+	address = {Dresden, Germany},
+	title = {Leveraging {Fine}-grained {Structured} {Sparsity} for {CNN} {Inference} on {Systolic} {Array} {Architectures}},
+	copyright = {https://ieeexplore.ieee.org/Xplorehelp/downloads/license-information/IEEE.html},
+	isbn = {978-1-6654-3759-2},
+	url = {https://ieeexplore.ieee.org/document/9556391/},
+	doi = {10.1109/FPL53798.2021.00060},
+	abstract = {The high computational complexity of convolutional neural networks (CNNs) has motivated many studies of accelerating CNN inference on ﬁeld-programmable gate arrays (FPGAs). Among these, designs that feature systolic arrays can effectively leverage the parallelism in CNNs while acheiving good placement and routing quality. Weight sparsity — the presence of zeros in CNN weights — can further reduce the number of necessary multiply-accumulate (MAC) operations in CNNs, but has yet resulted in performance gain on systolic arrays. In this work, we propose a novel ﬁne-grained structured weight sparsity pattern, showcase a processing element (PE) design that leverages this sparsity pattern, and develop a systolic array CNN inference accelerator that targets an Intel Arria 10 GX1150 FPGA. When evaluated on ResNet-50 and VGG-16 that are trained and pruned on the ImageNet dataset, our accelerator achieves 2.26 TOPs/s and 1.21 TOPs/s, respectively, on the MAC operations, while keeping the top-1 accuracy degradation within 5\%. These results translate to 2.86× and 1.75× speed-up compared to a dense systolic array baseline.},
+	language = {en},
+	urldate = {2025-10-15},
+	booktitle = {2021 31st {International} {Conference} on {Field}-{Programmable} {Logic} and {Applications} ({FPL})},
+	publisher = {IEEE},
+	author = {Liu, Linqiao and Brown, Stephen},
+	month = aug,
+	year = {2021},
+	pages = {301--305},
+	file = {PDF:C\:\\Users\\iamkr\\Zotero\\storage\\KG9TYP68\\Liu and Brown - 2021 - Leveraging Fine-grained Structured Sparsity for CNN Inference on Systolic Array Architectures.pdf:application/pdf},
+}
+
+@inproceedings{duk_kim_24_2020,
+	address = {San Francisco, CA, USA},
+	title = {2.4 {A} 7nm {High}-{Performance} and {Energy}-{Efficient} {Mobile} {Application} {Processor} with {Tri}-{Cluster} {CPUs} and a {Sparsity}-{Aware} {NPU}},
+	copyright = {https://ieeexplore.ieee.org/Xplorehelp/downloads/license-information/IEEE.html},
+	isbn = {978-1-7281-3205-1},
+	url = {https://ieeexplore.ieee.org/document/9062907/},
+	doi = {10.1109/ISSCC19947.2020.9062907},
+	language = {en},
+	urldate = {2025-10-15},
+	booktitle = {2020 {IEEE} {International} {Solid}- {State} {Circuits} {Conference} - ({ISSCC})},
+	publisher = {IEEE},
+	author = {Duk Kim, Young and Jeong, Wookyeong and Jung, Lakkyung and Shin, Dongsuk and Song, Jae Geun and Song, Jinook and Kwon, Hyeokman and Lee, Jaeyoung and Jung, Jaesu and Kang, Myungjin and Jeong, Jaehun and Kwon, Yoonjoo and Seong, Nak Hee},
+	month = feb,
+	year = {2020},
+	pages = {48--50},
+	file = {PDF:C\:\\Users\\iamkr\\Zotero\\storage\\FPMIAFVB\\Duk Kim et al. - 2020 - 2.4 A 7nm High-Performance and Energy-Efficient Mobile Application Processor with Tri-Cluster CPUs a.pdf:application/pdf},
+}
+
+@inproceedings{park_95_2021,
+	address = {San Francisco, CA, USA},
+	title = {9.5 {A} {6K}-{MAC} {Feature}-{Map}-{Sparsity}-{Aware} {Neural} {Processing} {Unit} in 5nm {Flagship} {Mobile} {SoC}},
+	copyright = {https://ieeexplore.ieee.org/Xplorehelp/downloads/license-information/IEEE.html},
+	isbn = {978-1-7281-9549-0},
+	url = {https://ieeexplore.ieee.org/document/9365928/},
+	doi = {10.1109/ISSCC42613.2021.9365928},
+	language = {en},
+	urldate = {2025-10-15},
+	booktitle = {2021 {IEEE} {International} {Solid}- {State} {Circuits} {Conference} ({ISSCC})},
+	publisher = {IEEE},
+	author = {Park, Jun-Seok and Jang, Jun-Woo and Lee, Heonsoo and Lee, Dongwoo and Lee, Sehwan and Jung, Hanwoong and Lee, Seungwon and Kwon, Suknam and Jeong, Kyungah and Song, Joon-Ho and Lim, SukHwan and Kang, Inyup},
+	month = feb,
+	year = {2021},
+	pages = {152--154},
+	file = {PDF:C\:\\Users\\iamkr\\Zotero\\storage\\AHCY2MJU\\Park et al. - 2021 - 9.5 A 6K-MAC Feature-Map-Sparsity-Aware Neural Processing Unit in 5nm Flagship Mobile SoC.pdf:application/pdf},
+}
